public/assets/style.css
/* ... */
.hero-content-box p{
	width: 95%;
	font-size: 110%;
	color: white !important;
}

.hero-btn button{
	background-color: rgba(225, 225, 225, 0.3);
	border: none;
    cursor:pointer;
    outline:none;
	border-radius: 25px;
	color: #FFC200 !important;
	font-weight: 500;
	padding: 2% 3%;
	letter-spacing: .1em;;
}

.hero-btn button:hover {
	background-color: #CE9D00;
	color: white !important;
}

/*This is style for home page*/

#section2 {

    /* Background styles */
    background-image: url("../images/bg-grad.png");
    background-position: right top;
    background-repeat: no-repeat;
	background-size: contain;
	position: static;
	z-index: 8;

	margin-bottom: 5%;
}

.section-inner {
	margin: auto auto; 
}

.section-content h1 {
	color: #2699FB;
	font-weight: bold;
}

.section-content p {
	font-weight: 500;
}

.section-content {
	width: 70%;
	margin: 5% auto; 
	text-align: center;
}

.section-list {
	width: 80%;
	margin: 0 auto;
	font-size: 1.1rem !important;
}

.section-list ul li {
	margin-bottom: 2%;
}

.section-list img {
	width: 80%;
	height: auto;
	align-self: center;
	margin: 0 auto;
	vertical-align: middle
}

.section-list img:hover {
	animation:rotate 3s ;
	animation-timing-function: cubic-bezier(1.5,0,1,1.5);
}
	
	@-webkit-keyframes rotate {
		from { -webkit-transform: rotate(0deg) } 
		to { -webkit-transform: rotate(360deg) } 
	}

.bigHeading {
	line-height: 1.6;
}

#homeHead img {
	max-width: 100%;
	max-height: 100vh;
	margin: auto;
}

#boxText {
	width: 60% !important;
	text-align: left !important;
	margin: 0 auto;
}

#boxText li {
	margin-bottom: 2%; 
}


.pageContent {
	margin: 5% auto !important;
	text-align: center;
}

.pageContent h1 {
	color: #116EBF;
}

#introText {
	width: 80%;
	margin: 2% auto;
}

.teachingTech {
	width: 90%;
	margin: 0 auto;
}

.techniques {
	font-weight: bold;
	color: #3E5B0D;
}


#carouselExampleControls .carousel-inner .carousel-item img {
	object-fit: cover !important;
}

#carouselExampleControls, #carouselExampleControls .carousel-inner {
        height: 100vh;
}

#carouselExampleControls .carousel-inner > #carouselExampleControls carousel.item {
    position: relative;
    display: none;
    -webkit-transition: 0.6s ease-in-out left;
    -moz-transition: 0.6s ease-in-out left;
    -o-transition: 0.6s ease-in-out left;
    transition: 0.6s ease-in-out left;
}


#carouselExampleControls a.carousel-control {

width: 60px;
background: #40404057;

}

.contact {
	text-align: left !important;
}

.contactContent {
	display: inline-block;
}

/*This is style for home page - TEACHERS*/



.team-member, .team-member .team-img {
    position: relative;
}
.team-member {
    overflow: hidden;
}

.team-img {
	height: 20vw;
}

.img-fit-css {
	min-width: 100%;
    height: auto;
    object-fit: cover !important;
}

.team-member, .team-member .team-img {
    position: relative;
}

.team-hover {
    position: absolute;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    margin: 0;
    /* border: 20px solid rgba(0, 0, 0, 0.1); */
    background-color:rgba(0, 0, 0, 0.1);
    opacity: 0;
    -webkit-transition: all 0.2s;
    transition: all 0.2s;
    color: #323232;
    font-weight: 400;
    
}

/* .team-member:hover .team-hover .desk {
    top: 40%;
} */
.team-member:hover .team-hover, .team-member:hover .team-hover .desk, .team-member:hover .team-hover .s-link {
    opacity: 1;
}
.team-hover .desk {
	background-color: rgba(255, 255, 255, 0.90);
    position: absolute;
    top: 55%;
    width: 90%;
	height: 90%;
    opacity: 0;
    -webkit-transform: translateY(-55%);
    -ms-transform: translateY(-55%);
    transform: translateY(-55%);
    -webkit-transition: all 0.3s 0.2s;
    transition: all 0.3s 0.2s;
    padding: 5%;
	margin: auto auto;
}

.team-hover .desk h5 {
	font-weight: bold;
	
}


.team-title {
    position: static;
    padding: 20px 0;
    display: inline-block;
    letter-spacing: 2px;
    width: 100%;
	text-align: left !important;
}
.team-title h5 {
    margin-bottom: 0px;
    display: block;
    text-transform: uppercase;
}
.team-title span {
    font-size: 12px;
    text-transform: uppercase;
    color: #a5a5a5;
    letter-spacing: 1px;
}


/* The flip card container - set the width and height to whatever you want. We have added the border property to demonstrate that the flip itself goes out of the box on hover (remove perspective if you don't want the 3D effect */
/* .flip-card {
  background-color: transparent;
  border: 1px solid #f1f1f1;
  perspective: 1000px; 
} */

/* This container is needed to position the front and back side */
/* .flip-card-inner {
  position: relative;
  text-align: center;
  transition: transform 0.8s;
  transform-style: preserve-3d;

  display: grid; grid-template: 1fr / 1fr;
  grid-template-areas: "frontAndBack";
} */

/* Do an horizontal flip when you move the mouse over the flip box container */
/* .flip-card:hover .flip-card-inner {
  transform: rotateY(180deg);
} */

/* Position the front and back side */
/* .flip-card-front, .flip-card-back {
  width: 100%;
  height: 100%;
  -webkit-backface-visibility: hidden; 
  backface-visibility: hidden;
} */

/* Style the front side (fallback if image is missing) */
/* .flip-card-front {
  background-color: white;
  color: black;
  grid-area: frontAndBack;
} */

/* Style the back side */
/* .flip-card-back {
  color: black;
  grid-area: frontAndBack;
  transform: rotateY(180deg);
  overflow: auto;
  margin-top: 2%;
} */



/*styling for map*/

.map {
	width: 90%;
	margin: 0 auto;
}

.map-responsive{
    overflow:hidden;
    padding-bottom:56.25%;
    position:relative;
    height:0;
}

.map-responsive iframe{
    left:0;
    top:0;
    height:100%;
    width:100%;
    position:absolute;
}

/* Style FOR CAC-KHOA-HOC */

	.smallText {
		display: none;
	}

	.smallTextBigScreen {
		display: block;
	}

.tuyensinh {
	width: 80%;
	border-radius: 15px; 
	background-color: #cc0000;
}

.tuyensinhContent {
	text-align: left !important;
	margin: 0 auto;
	width: 70%;
}
/* ... */

